src/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Available_End_Date__c</fullName>
        <label>Available End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Hours__c</fullName>
        <label>Available Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Start_Date__c</fullName>
        <label>Available Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Comments__c</fullName>
        <label>Client Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expert__c</fullName>
        <label>Expert</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Request_Candidates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Expert__c</fullName>
        <label>Requested Expert</label>
        <referenceTo>Project_Request_Detail__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAN-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>